--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Shared resources related to integration libraries for the \"Líbí se\" social plugin button by Seznam.cz.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "rm -rf dist/ && npm run compile && cp LICENSE package.json pocitadlolibise.css README.md dist/",
     "compile": "tsc --project .",
