Fix compatibility with legacy environments

--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "1.1.1",
   "description": "Shared resources related to integration libraries for the \"Líbí se\" social plugin button by Seznam.cz.",
   "module": "./esm/index.js",
-  "main": "./cjs/index.js",
+  "main": "./cjs/index.cjs",
   "type": "module",
   "types": "./esm/index.d.ts",
   "exports": {
     "import": "./esm/index.js",
-    "require": "./cjs/index.js"
+    "require": "./cjs/index.cjs"
   },
   "scripts": {
     "build": "rm -rf dist/ && npm run compile:esm && npm run compile:cjs && cp LICENSE package.json pocitadlolibise.css README.md dist/",
     "compile:esm": "tsc --outDir ./dist/esm/ --project .",
-    "compile:cjs": "tsc --outDir ./dist/cjs/ --module CommonJS --target ES5 --project .",
+    "compile:cjs": "tsc --outDir ./dist/cjs/ --module CommonJS --target ES5 --project . && mv ./dist/cjs/index.js ./dist/cjs/index.cjs",
     "test": "eslint . --ext .ts",
     "check-uncommitted": "git diff --exit-code >/dev/null && git diff --cached --exit-code >/dev/null",
     "prepublishOnly": "echo 'Use npm run publish-package' && exit 1",
